# thesoulforge

./: .gitignore  README.md  histats.go
Kvstore/: .gitignore  README.md  mix.exs
Kvstore/config/: config.exs
Kvstore/lib/: bucket.ex  kvstore.ex  registry.ex  supervisor.ex
Kvstore/test/: bucket_test.exs  kvstore_test.exs  registry_test.exs
advent_of_code/2023/: rinit  template.rs
advent_of_code/2024/: template.rs
advent_of_code/aoc01/: Cargo.toml
advent_of_code/aoc02/: Cargo.toml
advent_of_code/aoc03/: Cargo.toml
advent_of_code/aoc04/: Cargo.toml
advent_of_code/aoc05/: Cargo.toml
advent_of_code/aoc06/: Cargo.toml
c1brc/: .gitignore  Makefile  hash.c  hash.h  hash_funcs.c  hash_funcs.h  main.c
cmissile/: .gitignore  Makefile  ent.c  ent.h  main.c
cpp/: .gitignore  CMakeLists.txt  conc.cpp
dataserv/: .gitignore  Dockerfile  common.go  data_handler.go  main.go
fatptr/: .gitignore  CMakeLists.txt  README.md
fnav/: .gitignore  fnav.nimble
fnav/src/: fnav.nim
gloxy/: main.go
minigrep/: Cargo.toml
poller/: poller.go
rads/: Cargo.toml  README.md
rasync/: Cargo.toml
redis_cli/: Cargo.toml
redis_cli/src/: main.rs  protocol.rs  types.rs
ringbuffer/: ringbuffer.go  ringbuffer_test.go
rkv/: Cargo.toml
rlox/: Cargo.toml
rscrap/: Cargo.toml
rterm/: Cargo.toml
rtree/: Cargo.toml
scrap/: .gitignore  CMakeLists.txt
tmll/: Cargo.toml
uvserv/: .gitignore  CMakeLists.txt  main.c
zig/: base64.zig  http_buffer.zig  http_config.zig  http_main.zig  http_request.zig  http_server.zig
zmque/: .gitignore  CMakeLists.txt  README.md
(+157 files in other folders)
