[package]
name = "redis_cli"
version = "0.1.0"
authors = ["Jason Erdmann <jason.erdmann@tradingtechnologies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
